<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">QuickStudy</string>
    <string name="add_new_exam">New exam</string>
    <string name="edit_exam">Edit exam</string>
    <string name="your_exams">Your exams</string>
    <string name="action_settings">Settings</string>
    <string name="date_of_exam">Date</string>
    <string name="exam_name">Exam name</string>
    <string name="hours_per_day">Hours per day</string>
    <string name="hour_of_exam">Time</string>

    <string name="pref_sessions">Study sessions preferences</string>
    <string name="pref_days_title">Days of the week</string>
    <string name="pref_days_summary">Choose the days of the week you want to study</string>
    <string name="pref_hours_number_tittle">Customize difficulties</string>
    <string name="pref_hours_number_summary">Set the hours of study sessions according to difficulty</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="title_activity_list" translatable="false">QuickStudy</string>
    <string name="exam_is_registered">Signed up</string>
    <string name="exam_not_registered">Not signed up</string>
    <string name="view_exam" translatable="false"></string>
    <string name="select_difficulties">Select the exam\'s level</string>
    <string name="details">Details</string>
    <string name="title_activity_feed" translatable="false">Feedback</string>
    <string name="enter_feedback">Enter feedback details to send to the developer:</string>
    <string name="your_name">Your name</string>
    <string name="email">Your email</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_response">Would you like an email response?</string>
    <string name="feedbacktype">Feedback type</string>
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Complaint</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="title_activity_edit_exam">Edit exam</string>

    <string name="difficulty_easy">Easy study session</string>
    <string name="difficulty_medium">Medium study session</string>
    <string name="difficulty_hard">Hard study session</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <!--Actions-->
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="go_to_calendar">Go to calendar</string>

    <!--Selectors-->
    <string name="all">All exams</string>
    <string name="incoming">Incoming exams</string>
    <string name="old">Old exams</string>

    <string name="enable_day">Enable study sessions</string>
    <string name="study_day">Study on this day</string>
    <string name="time_slot">Time slots</string>
    <string name="set_time_slot">Set time slots for this day</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="signed_up">Signed up</string>
    <string name="title_activity_about">About</string>

    <string name="no_data_available">Tap the plus button to add an exam!</string>

    <string name="start_now">Start now</string>

    <string name="fields_required">All fields are required</string>

    <string name="thank_you">Thank you for your help!</string>

    <string name="signed">You\'ve already signed up for this exam</string>
    <string name="not_signed">You haven\'t signed up yet</string>

    <string name="delete_exam">Delete exam</string>
    <string name="confirm_delete">Are you sure you want to delete this exam?</string>
    <string name="success_delete">The exam has been deleted</string>
    <string name="failed_delete">An error occurred while deleting the exam</string>

    <string name="share_with">Share with...</string>
    <string name="share_1">I have an exam in</string>
    <string name="share_2">on the</string>
    <string name="share_3">wish me good luck!</string>
    <string name="share_a">I passed the exam in</string>
    <string name="share_b">of the</string>
    <string name="share_c">with a score of</string>
    <string name="what_score">What score did you get?</string>

    <string name="hours">hours</string>

    <string name="exam_in">Exam in</string>
    <string name="study">Study</string>

    <string name="insert_value">Insert a value between 1 and 12</string>
    <string name="reschedule">Reschedule</string>
    <string name="success_reschedule">Rescheduling succeeded!</string>
    <string name="success_del_sessions">Study sessions has been successfully deleted</string>
    <string name="confirm_reschedule">Do you want to reschedule your study sessions?</string>
    <string name="confirm_del_sessions">Do you really want to delete your study sessions? (The exam will remain)</string>
    <string name="reschedule_sessions">Reschedule study sessions</string>
    <string name="delete_sessions">Delete study sessions</string>

    <string name="about_quick_study">QuickStudy:\n-Organises the study plan\n -Shows when you should study\n -Keep an eye on you if you signed up your exams in time,\n- Uses calendar to show suggested planning sessions and exams.\n\nAdd new exam and see QuickStudy\'s proposition of studying schedule in your calendar!</string>

</resources>
