<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- Edit should appear as action button -->
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title="@string/share"
        app:actionProviderClass= "android.support.v7.widget.ShareActionProvider" />
    <item android:id="@+id/action_reschedule"
        android:icon="@drawable/ic_rescheduling"
        android:title="@string/reschedule"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete_sessions"
        android:title="@string/delete_sessions"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>