<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/enter_feedback"
            android:textSize="22sp"/>

        <EditText
            android:id="@+id/feed_name"
            android:layout_height="48dp"
            android:hint="@string/your_name"
            android:layout_marginLeft="12dp"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:background="@null"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/feed_email"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:layout_marginLeft="12dp"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:background="@null"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/darker_gray"/>

        <Spinner
            android:id="@+id/spinner_feedbacktype"
            android:layout_height="48dp"
            android:layout_marginLeft="12dp"
            android:prompt="@string/feedbacktype"
            android:layout_width="wrap_content"
            android:spinnerMode="dialog"
            android:entries="@array/feedbacktype_list"
            android:background="@null"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/darker_gray"/>

        <EditText
            android:id="@+id/feed_details"
            android:layout_height="wrap_content"
            android:hint="@string/details"
            android:layout_marginLeft="12dp"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent"
            android:background="@null"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/darker_gray"/>

        <CheckBox
            android:id="@+id/checkbox_response"
            android:layout_height="wrap_content"
            android:text="@string/feedback_response"
            android:textColor="@color/dark_text_color"
            android:layout_marginLeft="6dp"
            android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/submit_feedback"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:onClick="sendFeedback"
            android:background="@color/main_color"
            android:layout_width="fill_parent"/>

    </LinearLayout>
</ScrollView>