<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- opens a subscreen of settings -->
    <PreferenceCategory
        android:key="button_pref_sessions_category_key"
        android:title="@string/pref_sessions">
        <PreferenceScreen
            android:title="@string/pref_days_title"
            android:summary="@string/pref_days_summary"
            android:persistent="false">
            <CheckBoxPreference
                android:key="preference_monday"
                android:title="Monday"
                android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="preference_tuesday"
                android:title="Tuesday"
                android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="preference_wednesday"
                android:title="Wednesday"
                android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="preference_thursday"
                android:title="Thursday"
                android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="preference_friday"
                android:title="Friday"
                android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="preference_saturday"
                android:title="Saturday"
                android:defaultValue="true"/>
            <CheckBoxPreference
                android:key="preference_sunday"
                android:title="Sunday"
                android:defaultValue="true"/>
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>