<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".AddNewExamActivity" tools:ignore="MergeRootFrame"
    android:background="@color/background_color">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_label"/>

                <EditText
                    android:id="@+id/examNameEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/exam_name"
                    android:background="@null"
                    android:inputType="textCapSentences"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="56dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_calendar"/>

                <EditText
                    android:id="@+id/dateOfExamEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:inputType="date"
                    android:hint="@string/date_of_exam"
                    android:focusable="false"
                    android:background="@null"
                    android:enabled="true"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="56dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_clock"/>

                <EditText
                    android:id="@+id/hourOfExamEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:inputType="none"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hour_of_exam"
                    android:enabled="true"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="56dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/ic_rate"/>

                <Spinner
                    android:id="@+id/exam_difficulty_spinner"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_difficulties"
                    android:spinnerMode="dialog"
                    android:background="@null"/>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="56dp"
                android:layout_marginBottom="32dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    </ScrollView>
</FrameLayout>
